<resources>

    <string name="main_activity_title">Users</string>
    <string name="tv_txt_name">Name: </string>
    <string name="tv_txt_surname">Surname: </string>
    <string name="tv_txt_age">Age: </string>
    <string name="tv_txt_gender">Gender: </string>

    <string name="settings_reverse_title">Reverse sort</string>

    <string name="hint_user_name">Enter your username</string>
    <string name="hint_user_pass">Enter your password</string>
    <string name="hint_user_age">Your full age</string>
    <string name="hint_user_gender">Your gender</string>
    <string name="hint_user_pass_conf">Confirm your password</string>


    <string name="add_user_personal_information"> Personal information</string>
    <string name="error_gps_permission">You didn\'t give permission to access your location</string>

    <string name="btn_text_buy">Buy</string>
    <string name="btn_user_sign_in">Sign In</string>
    <string name="btn_sign_up_text">Register now</string>
    <string name="btn_validate">Confirm your status</string>
    <string name="err_empty_field">Empty field</string>
    <string name="err_short_data">Your input is too short</string>
    <string name="err_pass_not_equals">Passwords not equals</string>
    <string name="err_invalid_value">Invalid value</string>
    <string name="pref_sort_title">Sort by</string>
    <string name="pref_sort_reverse_summary">If selected, the list will be sorted with reverse order</string>
    <string name="pref_sql_method_title">Select SQL method</string>
    <string name="btn_edit_description">Edit data</string>
    <string name="btn_delete_description">Delete data</string>
    <string name="btn_text_share">Share</string>
    <string name="err_connection">Connection error</string>

    <string name="update_user_btn_update">Update user</string>

    <string name="nothing">Nothing</string>
    <string name="name">Name :</string>
    <string name="surname">Surname :</string>
    <string name="age">Age :</string>
    <string name="verified">Verified :</string>
    <string name="pass_confirmation">Pass confirmation</string>
    <string name="save_changes">Save changes</string>
    <string name="personal_data">The simulator is my home</string>

    <string name="app_name">Sport App Maximus</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home_training">Home Training</string>
    <string name="title_progress">Progress</string>
    <string name="title_progress_screen">Progress Screen</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="title_store">Store</string>
    <string name="title_home_ex_placeholder">Home Training</string>

    <string name="tt">TT</string>
    <string name="tp">TP</string>

    <string name="t1">Нижегородское областное училище олимпийского резерва им. В.С. Тишина. Колледж физической культуры и спорта, экономики и технологии Санкт-Петербургского государственного университета. Приморское государственное училище (техникум) олимпийского резерва (г. Владивосток). Колледж физической культуры и спорта "Спарта" (г. Москва). Московское среднее специальное училище олимпийского резерва №4 им. А.Я. Гомельского (техникум) Департамента спорта и туризма г. Москвы.
</string>

    <string name="w1"><b>1.Pull-ups on the bar </b>\n
Basic functional exercise for developing the muscles of the back, shoulder girdle and arms. \n
        <i>3-4 sets of 8-10 reps</i>
    </string>

    <string name="w2"><b>2.Exercise "Bicycle" </b>\n
    One of the best exercises for strengthening core and abdominal muscles. \n
   <i> 3-4 sets of 10-15 reps</i>
    </string>

    <string name="w11"><b> 1.Elbow plank</b> \n
A sophisticated variation of the classic plank exercise. \n
        Helps to improve posture, strengthen abs and develop the shoulder girdle. \n
        <i> 3 sets of 45-60 seconds</i>
    </string>

        <string name="w4"><b>4.Side bar</b>\n
Exercise for the development of oblique abdominal muscles. \n
       Try to keep your abdominal muscles tense while doing it.\n
        <i> 3 sets of 45-60 seconds</i>
    </string>

    <string name="w111"><b>1.Pushups</b>\n
        A key exercise for developing the pectoral muscles. At the top, push off the floor as hard as possible, opening your back.\n
        <i>  3-4 sets of 10-12 reps</i>

</string>

    <string name="w33"><b>3.Reverse push-ups</b>\n
Exercise to strengthen the muscles of the triceps, forearms and shoulder girdle. At the top point, as if pushing your body weight up.\n
        <i>3-4 sets of 10-15 reps</i>
</string>

    <string name="w22"><b>2.Lunges on one leg</b>\n
Exercise for the muscles of the front of the thigh and for the buttocks. As you exhale, lower yourself down, keeping the body upright and the abs tense.\n
        <i>3-4 sets of 10-15 reps</i>
</string>

    <string name="w333"><b>3.Bodyweight squats</b>\n
A key exercise for developing leg muscles. As you lower yourself down, feel the tension of the abdominal muscles. Rise up as you inhale, opening your chest.\n
        <i>3-4 sets of 10-12 reps</i>
</string>

    <string name="w222"><b>2.Lying Leg Raise</b>\n
Exercise for the lower press. It is performed without lifting the lower back from the floor and with a constant feeling of the press.\n
        <i>3-4 sets of 10-12 reps</i>
</string>

    <string name="w55"><b>5.Lying Hip Raise</b>\n
Exercise to develop the lower press and strengthen the buttocks. As you exhale, lift your hips up, then linger at the top point.\n
        <i> 3 sets of 45-60 seconds</i>
</string>

    <string-array name="exercise">
        <item>1.Pull-ups on the bar</item>
        <item>2.Side bar</item>
        <item>3.Lying Leg Raise</item>
        <item>4.Barbell</item>
        <item>5.Press</item>
        <item>6.Dumbbells</item>
        <item>7.Push ups</item>
        <item>8.Pull-ups</item>
    </string-array>


    <string name="title_hot_goods">HOT</string>
    <string name="btn_text_sportswear">SPORTSWEAR</string>
    <string name="btn_text_equipment">SPORTS EQUIPMENT</string>
    <string name="btn_text_other">OTHER</string>
</resources>