<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home_ex_placeholder" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_progress_24dp"
        android:title="@string/title_progress" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_store_24dp"
        android:title="@string/title_store" />

</menu>