<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sportappmaximus.ui.home.HomeFragment"
        android:label="@string/title_home_training"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.sportappmaximus.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.sportappmaximus.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.sportappmaximus.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.example.sportappmaximus.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />
</navigation>