<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/personal_data"
            app:layout_constraintStart_toStartOf="@+id/textInputEditText"
            app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_personal_information"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/add_user_personal_information"
            android:inputType="textPersonName"
            android:maxLength="30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/pass_confirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="550dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                app:srcCompat="@drawable/profile"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"

                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/nameTextView"
                android:gravity="center"
                android:text="Вася" />

            <TextView
                android:id="@+id/surnameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTextView"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/surnameEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@+id/surnameTextView"
                android:gravity="center"
                android:text="Пупкин" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/surnameTextView"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/age" />

            <EditText
                android:id="@+id/ageEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:layout_toEndOf="@+id/ageTextView"
                android:gravity="center"
                android:text="20" />

            <TextView
                android:id="@+id/verifiedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ageTextView"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/verified" />

            <EditText
                android:id="@+id/verifiedEditTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="120dp"
                android:layout_toEndOf="@+id/verifiedTextView"
                android:gravity="center"
                android:text="Да" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="573dp" />

        </RelativeLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="159dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="159dp"
            android:text="@string/save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>