<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Массовый спорт. Тренеры работают в различных клубах и спортивных школах, куда приводят маленьких детей. Они учат основам спортивного мастерства, выявляют таланты и советуют родителям, куда дальше отдать на обучение их ребенка. Также есть тренеры, которые работают с ветеранскими командами, коллективами физкультуры, трудовыми коллективами и т.д. Их задача не собирать медали, а, давая соразмерные возрасту и уровню готовности нагрузки, помогать вести людям активный и здоровый способ жизни, поддерживать их физическое здоровье. Индивидуальная тренировка спортсмена. Здесь задача тренера – выявлять талантливых спортсменов в своем виде спорта и вести его на протяжении всей карьеры. Им необходимо разрабатывать методики тренировки, графики подготовки к каждому соревнованию, режим питания, следить за состоянием здоровья и т.д. Тренер делит со своим учеником все успехи и неудачи. Подготовка спортивных команд. Командный тренер должен обладать особыми способностями: надо создать в коллективе атмосферу взаимной поддержки и сотрудничества. Необходимо настраивать команду на победу в матче, даже если он складывается не лучшим образом, уметь поменять тактику по ходу матча."
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputEditText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_personal_information"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textInputEditText"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:hint="@string/t1"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:text="Тренер со стажем, не подкачает)"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile"
                tools:src="@tools:sample/avatars"
                tools:srcCompat="@drawable/t1" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"

                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:layout_toRightOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/name"
                app:layout_constraintStart_toEndOf="@+id/avatarImageView"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <EditText
                android:id="@+id/nameEditTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/nameTextView"
                android:gravity="center"
                android:text="Илья"
                app:layout_constraintStart_toEndOf="@+id/nameTextView"
                app:layout_constraintTop_toBottomOf="@+id/tf_personal_information" />

            <TextView
                android:id="@+id/surnameTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/nameTextView"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/surname"
                app:layout_constraintStart_toEndOf="@+id/avatarImageView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <EditText
                android:id="@+id/surnameEditTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/surnameTextView"
                android:gravity="center"
                android:text="Киселенко"
                app:layout_constraintStart_toEndOf="@+id/surnameTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <TextView
                android:id="@+id/ageTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/surnameTextView"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/age"
                app:layout_constraintStart_toEndOf="@+id/avatarImageView"
                app:layout_constraintTop_toBottomOf="@+id/surnameTextView" />

            <EditText
                android:id="@+id/ageEditTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_toEndOf="@+id/ageTextView"
                android:gravity="center"
                android:text="34"
                app:layout_constraintEnd_toStartOf="@+id/surnameEditTextView"
                app:layout_constraintStart_toEndOf="@+id/ageTextView"
                app:layout_constraintTop_toBottomOf="@+id/surnameTextView" />

            <TextView
                android:id="@+id/verifiedTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_below="@+id/ageTextView"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/avatarImageView"
                android:gravity="center"
                android:text="@string/verified"
                app:layout_constraintStart_toEndOf="@+id/avatarImageView"
                app:layout_constraintTop_toBottomOf="@+id/ageTextView" />

            <EditText
                android:id="@+id/verifiedEditTextView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/verifiedTextView"
                android:gravity="center"
                android:text="Да"
                app:layout_constraintStart_toEndOf="@+id/verifiedTextView"
                app:layout_constraintTop_toBottomOf="@+id/ageTextView" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="Места тренеровок :"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:srcCompat="@drawable/google_map" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.core.widget.NestedScrollView>